Fix [Nuclio] Test pane: response body overflow (#326)

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -463,7 +463,7 @@
                 height: 208px;
 
                 .monaco-code-editor {
-                    width: 100%;
+                    width: 97%;
 
                     .ncl-monaco {
                         height: 100%;
@@ -618,7 +618,7 @@
                     width: 100%;
 
                     .monaco-code-editor {
-                        width: 100%;
+                        width: 97%;
 
                         .ncl-monaco {
                             height: 100%;
